--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,9 +13,12 @@ jobs:
       - uses: actions/checkout@v3
       - name: install packages
         run: make install
-
       - name: format
         run: make format
       - name: uvicorn-running
         run: make run-uvicorn
+      - name: uvicorn-stopping
+        run: sudo kill alluvicorn
+      - name:  lint
+        run: make lint --disable=R,C aap/main.py
     
