--- a/.github/workflows/start-app.yml
+++ b/.github/workflows/start-app.yml
@@ -15,6 +15,6 @@ jobs:
         run: make install
       - name: format
         run: make format
-      - name: uvicorn-running
-        run: make run-uvicorn
+      #- name: uvicorn-running
+        #run: make run-uvicorn
     
