--- a/.github/workflows/acr.yml
+++ b/.github/workflows/acr.yml
@@ -42,7 +42,7 @@ jobs:
       - name: Lowercase the repo name and username
         run: echo "REPO=${GITHUB_REPOSITORY,,}" >>${GITHUB_ENV}
 
-      - name: Build and push container image Azure Container Registry
+      - name: Build and push container image to Azure Container Registry
         uses: docker/build-push-action@v2
         with:
           push: true
