--- a/.github/workflows/acr.yml
+++ b/.github/workflows/acr.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
-      - name: Log in to GitHub container registry
+      - name: Log in to Azure Container Registry container registry
         uses: docker/login-action@v1.10.0
         with:
           registry: hfacr1.azurecr.io
