--- a/.github/workflows/acr.yml
+++ b/.github/workflows/acr.yml
@@ -1,5 +1,7 @@
 name: Azure Container Registry
-
+env:
+  AZURE_CONTAINER_APP_NAME: hf-azure-c-app
+  AZURE_GROUP_NAME: HFAzureCR
 
 # This is a basic workflow to help you get started with Action
 
@@ -48,3 +50,22 @@ jobs:
           push: true
           tags: hfacr1.azurecr.io/${{ env.REPO }}:${{ github.sha }}
           file: ./Dockerfile
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    
+    steps:
+      - name: Azure Login
+        uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+
+      - name: Deploy to containerapp
+        uses: azure/CLI@v1
+        with:
+          inlineScript: |
+            az config set extension.use_dynamic_install=yes_without_prompt
+            az containerapp registry set -n hf-azure-c-app -g HFAzureCR --server hfacr1.azurecr.io --username ${{ secrets.ACR_USERNAME }} --password ${{ secrets.ACR_PASSWORD }}
+            az containerapp update -n hf-azure-c-app -g HFAzureCR --cpu 1 --memory 2Gi
+            az containerapp update -n hf-azure-c-app -g HFAzureCR --image hfacr1.azurecr.io/ramzirebai/ci-cd_with_fastapi_hf_translator:${{ github.sha }}
