--- a/.github/workflows/cd_azure_app.yml
+++ b/.github/workflows/cd_azure_app.yml
@@ -48,7 +48,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: hfacr1.azurecr.io/${{ env.REPO }}:${{ github.sha }}
+          tags: hfazurecr.azurecr.io/${{ env.REPO }}:${{ github.sha }}
           file: ./Dockerfile
   deploy:
     runs-on: ubuntu-latest
@@ -66,6 +66,6 @@ jobs:
         with:
           inlineScript: |
             az config set extension.use_dynamic_install=yes_without_prompt
-            az containerapp registry set -n hf-azure-c-app -g HFAzureCR --server hfacr1.azurecr.io --username ${{ secrets.ACR_USERNAME }} --password ${{ secrets.ACR_PASSWORD }}
-            az containerapp update -n hf-azure-c-app -g HFAzureCR --cpu 1 --memory 2Gi
-            az containerapp update -n hf-azure-c-app -g HFAzureCR --image hfacr1.azurecr.io/ramzirebai/ci-cd_with_fastapi_hf_translator:${{ github.sha }}
+            az containerapp registry set -n hfazurecontapp -g HFAzureCR --server hfacr1.azurecr.io --username ${{ secrets.ACR_USERNAME }} --password ${{ secrets.ACR_PASSWORD }}
+            az containerapp update -n hfazurecontapp -g HFAzureCR --cpu 0.25 --memory 0.5Gi
+            az containerapp update -n hfazurecontapp -g HFAzureCR --image hfazurecr.azurecr.io/ramzirebai/ci-cd_with_fastapi_hf_translator:${{ github.sha }}
