--- a/.github/workflows/cd_azure_app.yml
+++ b/.github/workflows/cd_azure_app.yml
@@ -66,6 +66,6 @@ jobs:
         with:
           inlineScript: |
             az config set extension.use_dynamic_install=yes_without_prompt
-            az containerapp registry set -n hfazurecontapp -g HFAzureCR --server hfacr1.azurecr.io --username ${{ secrets.ACR_USERNAME }} --password ${{ secrets.ACR_PASSWORD }}
+            az containerapp registry set -n hfazurecontapp -g HFAzureCR --server hfazurecr.azurecr.io --username ${{ secrets.ACR_USERNAME }} --password ${{ secrets.ACR_PASSWORD }}
             az containerapp update -n hfazurecontapp -g HFAzureCR --cpu 0.25 --memory 0.5Gi
             az containerapp update -n hfazurecontapp -g HFAzureCR --image hfazurecr.azurecr.io/ramzirebai/ci-cd_with_fastapi_hf_translator:${{ github.sha }}
