--- a/.github/workflows/cd_azure_app.yml
+++ b/.github/workflows/cd_azure_app.yml
@@ -1,4 +1,4 @@
-name: Trigger Auto Deployment for hf-azure-c-app
+name: Trigger Auto Deployment for hfazurecontapp
 env:
   AZURE_CONTAINER_APP_NAME: hf-azure-c-app
   AZURE_GROUP_NAME: HFAzureCR
