--- a/.github/workflows/cd_azure_app.yml
+++ b/.github/workflows/cd_azure_app.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Log in to Azure Container Registry container registry
         uses: docker/login-action@v1.10.0
         with:
-          registry: hfacr1.azurecr.io
+          registry: hfazurecr.azurecr.io
           username: ${{ secrets.ACR_USERNAME }}
           password: ${{ secrets.ACR_PASSWORD }}
 
