--- a/.github/workflows/cd_azure_app.yml
+++ b/.github/workflows/cd_azure_app.yml
@@ -29,7 +29,7 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v2
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
@@ -50,6 +50,7 @@ jobs:
           push: true
           tags: hfazurecr.azurecr.io/${{ env.REPO }}:${{ github.sha }}
           file: ./Dockerfile
+
   deploy:
     runs-on: ubuntu-latest
     needs: build
@@ -60,7 +61,6 @@ jobs:
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-
       - name: Deploy to containerapp
         uses: azure/CLI@v1
         with:
@@ -68,4 +68,4 @@ jobs:
             az config set extension.use_dynamic_install=yes_without_prompt
             az containerapp registry set -n hfazurecontapp -g HFAzureCR --server hfazurecr.azurecr.io --username ${{ secrets.ACR_USERNAME }} --password ${{ secrets.ACR_PASSWORD }}
             az containerapp update -n hfazurecontapp -g HFAzureCR --cpu 0.25 --memory 0.5Gi
-            az containerapp update -n hfazurecontapp -g HFAzureCR --image hfazurecr.azurecr.io/ramzirebai/ci-cd_with_fastapi_hf_translator:${{ github.sha }}
+            az containerapp update -n hfazurecontapp -g HFAzureCR --image hfazurecr.azurecr.io/${{ env.REPO }}:${{ github.sha }}
