--- a/.github/workflows/cd_azure_app.yml
+++ b/.github/workflows/cd_azure_app.yml
@@ -1,7 +1,7 @@
 name: Trigger Auto Deployment for hfazurecontapp
-env:
-  AZURE_CONTAINER_APP_NAME: hfazurecontapp
-  AZURE_GROUP_NAME: HFAzureCR
+#env:
+  #AZURE_CONTAINER_APP_NAME: hfazurecontapp
+  #AZURE_GROUP_NAME: HFAzureCR
 
 # This is a basic workflow to help you get started with Action
 
