--- a/.github/workflows/cd_azure_app.yml
+++ b/.github/workflows/cd_azure_app.yml
@@ -33,6 +33,8 @@ jobs:
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
+      - name: Check Az CLI installation
+        run: az --version
 
       - name: Log in to Azure Container Registry container registry
         uses: docker/login-action@v1.10.0
