--- a/.github/workflows/start-app.yml
+++ b/.github/workflows/start-app.yml
@@ -8,7 +8,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  continuous_integration:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
